# ConnectTheDots

./: CMakeLists.txt
CMake/: GetQtRuntime.cmake  GetRuntime.cmake  VLDSupport.cmake
